# community-metrics

./: README.md  docker-compose.yml
config/hatstall/: apache-hatstall.conf  shdb.cfg
config/mordred/: organizations.json  projects.json  setup.cfg
legacy/: docker-compose.yml  env.sample
legacy/config/hatstall/: apache-hatstall.conf  entry.sh  shdb.cfg
legacy/config/mordred/: entry.sh  organizations.json  projects.json  setup.cfg
scripts/panels/: add.sh  dashboards_index_patterns.ndjson  menu.json
