[general]
short_name = LineaPy
update = true
min_update_delay = 3000
debug = false
logs_dir = /home/bitergia/logs
aliases_file = /home/bitergia/conf/aliases.json

[projects]
projects_file = /home/bitergia/conf/projects.json

[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
autorefresh = true

[sortinghat]
password=MYSQL_ROOT_PASSWORD
host = mariadb
user = root
database = demo_sh
load_orgs = true
orgs_file = /home/bitergia/conf/organizations.json
autoprofile = [github, pipermail, git]
matching = [email]
sleep_for = 3000
unaffiliated_group = Unknown
affiliate = true
strict_mapping = false
reset_on_load = false
identities_file = [/home/bitergia/conf/identities.yml]
identities_format = grimoirelab

[panels]
kibiter_time_from = now-1y
kibiter_default_index = git
kibiter_url = http://kibiter:5601
kibiter_version = 6.1.4-1
#github-events = true
github-repos = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git_raw
enriched_index = git_demo_enriched
latest-items = true
studies = [enrich_demography:git, enrich_git_branches:git, enrich_areas_of_code:git, enrich_onion:git, enrich_extra_data:git]

[enrich_demography:git]

[enrich_git_branches:git]
run_month_days = [1, 23]

[enrich_areas_of_code:git]
in_index = git_raw
out_index = git-aoc_enriched

[enrich_onion:git]
in_index = git_enriched
out_index = git-onion_enriched
contribs_field = hash

[enrich_extra_data:git]
json_url = https://gist.githubusercontent.com/zhquan/bb48654bed8a835ab2ba9a149230b11a/raw/5eef38de508e0a99fa9772db8aef114042e82e47/bitergia-example.txt

[enrich_forecast_activity]
out_index = git_study_forecast

[github]
api-token=GITHUB_API_TOKEN
raw_index = github_demo_raw
sleep-for-rate = true
sleep-time = "300"
enriched_index = github_demo_enriched

[github:repo]
api-token=GITHUB_API_TOKEN
raw_index = github-repo_raw
enriched_index = github-repo_enriched
category = repository
sleep-for-rate = true
no-archive = true
studies = [enrich_extra_data:github]

[github:issue]
api-token=GITHUB_API_TOKEN
raw_index = github_raw
enriched_index = github_enriched
category = issue
sleep-for-rate = true
no-archive = true
studies = [enrich_onion:github,
           enrich_geolocation:user,
           enrich_geolocation:assignee,
           enrich_extra_data:github,
           enrich_backlog_analysis]

[enrich_extra_data:github]
json_url = https://gist.githubusercontent.com/zhquan/bb48654bed8a835ab2ba9a149230b11a/raw/5eef38de508e0a99fa9772db8aef114042e82e47/bitergia-example.txt

[github:pull]
raw_index = github-pull_raw
enriched_index = github-pull_enriched
api-token = xxxx
category = pull_request
sleep-for-rate = true
no-archive = true (suggested)
studies = [enrich_geolocation:user, enrich_geolocation:assignee, enrich_extra_data:github]

[enrich_onion:github]
in_index_iss = github_issues_onion-src
in_index_prs = github_prs_onion-src
out_index_iss = github-issues-onion_enriched
out_index_prs = github-prs-onion_enriched

[enrich_geolocation:user]
location_field = user_location
geolocation_field = user_geolocation

[enrich_geolocation:assignee]
location_field = assignee_location
geolocation_field = assignee_geolocation

[enrich_backlog_analysis]
out_index = github_enrich_backlog
interval_days = 7
reduced_labels = [bug,enhancement]
map_label = [others, bugs, enhancements]


#[slack]
#raw_index = slack_demo_raw
#enriched_index = slack_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true

## studies based on enriched indexes

#[enrich_areas_of_code:git]
#in_index = git_demo_raw
#out_index = git-aoc_demo_enriched

#[enrich_onion:git]
#in_index = git
#out_index = git-onion_demo_enriched
#contribs_field = hash

[discourse]
raw_index = discourse_raw
enriched_index = discourse_enriched
no-archive = true
